package mobilefactory.mobileComponent;

public class Battery {
}
