package mobilefactory.mobileComponent;

public abstract class ModelDetailInformation {
    public String producer;
    public String releaseDate;
}
