package mobilefactory.mobileComponent;

public abstract class OSSoftware {
    public abstract void run();
}
