@startuml

title __MOBILECOMPONENT's Class Diagram__\n

  namespace mobilefactory {
    namespace mobileComponent {
      class mobilefactory.mobileComponent.Antenna {
      }
    }
  }
  

  namespace mobilefactory {
    namespace mobileComponent {
      class mobilefactory.mobileComponent.Battery {
      }
    }
  }
  

  namespace mobilefactory {
    namespace mobileComponent {
      class mobilefactory.mobileComponent.Camera {
      }
    }
  }
  

  namespace mobilefactory {
    namespace mobileComponent {
      class mobilefactory.mobileComponent.IOSModelDetailInformation {
          + IOSModelDetailInformation()
          + getIosModel()
      }
    }
  }
  

  namespace mobilefactory {
    namespace mobileComponent {
      abstract class mobilefactory.mobileComponent.ModelDetailInformation {
          + producer : String
          + releaseDate : String
      }
    }
  }
  

  namespace mobilefactory {
    namespace mobileComponent {
      abstract class mobilefactory.mobileComponent.OSSoftware {
          {abstract} + run()
      }
    }
  }
  

  namespace mobilefactory {
    namespace mobileComponent {
      class mobilefactory.mobileComponent.SamsungModelDetailInformation {
          + SamsungModelDetailInformation()
          + getSamsungModel()
      }
    }
  }
  

  mobilefactory.mobileComponent.IOSModelDetailInformation -up-|> mobilefactory.mobileComponent.ModelDetailInformation
  mobilefactory.mobileComponent.IOSModelDetailInformation o-- mobilefactory.ModelInformation.IOSModel : iosModel
  mobilefactory.mobileComponent.SamsungModelDetailInformation -up-|> mobilefactory.mobileComponent.ModelDetailInformation
  mobilefactory.mobileComponent.SamsungModelDetailInformation o-- mobilefactory.ModelInformation.SamsungModel : samsungModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
